# sparse_splat

./: .gitignore  README.md  pyproject.toml
sparse_splat/: config.py  model.py
sparse_splat.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
