[project]
name = "sparse-splat"
description = "Sparser Gaussian Splatting"
version = "0.1.0"

dependencies = ["nerfstudio >= 1.1.0"] 

[tool.setuptools.packages.find]
include = ["sparse_splat*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
sparse-splat = 'sparse_splat.config:sparse_splat'
